src/Surfnet/StepupMiddleware/ManagementBundle/Tests/Validator/Fixtures/invalid_configuration/no_raa.php
<?php

return [
    'expectedError' => "Required property 'raa' is missing",
    'expectedPropertyPath' => '(root)',
    'configuration' => [
        'gateway' => []
    ]
];
